--- a/templates/index.htm
+++ b/templates/index.htm
@@ -7,13 +7,13 @@
         {% include "widgets/navbar.htm" %}
     <!-- end nav -->
     <!-- start header -->
-        {% include "basesections\header.htm" %}
+        {% include "basesections/header.htm" %}
     <!-- end header -->
     <!-- start main -->
-        {% include "basesections\main.htm" %}
+        {% include "basesections/main.htm" %}
     <!-- end main -->
     <!-- start footer -->
-        {% include "basesections\footer.htm" %}
+        {% include "basesections/footer.htm" %}
     <!-- end footer -->
 {% endblock content %}
 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Inventore ratione quae iusto voluptatibus temporibus repellendus! Quae dolorem a nulla sapiente vero dolores dicta velit ea mollitia impedit suscipit, hic dolorum!
