--- a/templates/base.htm
+++ b/templates/base.htm
@@ -14,6 +14,11 @@
         <link rel="stylesheet" href="{% static 'css/models/slick/slick-theme.css' %}">
         <link  href="https://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.css" rel="stylesheet">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+        <style>
+            body{
+                overflow-x: hidden;
+            }
+        </style>
     </head>
     <body>
         {% block content %}
@@ -37,7 +42,8 @@
         $(document).ready(function(){
             $('.marquee').marquee({
                 speed: 80,
-            })
+            });
+            $(".carousel-item:first").addClass('active')
             $('#images-modal').hide();
             $("#slideshow-btn").hide();
             $('#slideshow-btn').click(function(){
