--- a/templates/basesections/footer_ru.htm
+++ b/templates/basesections/footer_ru.htm
@@ -30,12 +30,11 @@
             <div class="aboutsite">
                 <h3>Свяжитесь с нами</h3>
                 <div class="text-footer">
-                    <span>Tel: +99871000000</span>
+                    <span>Tel: +998 70 762-58-55</span>
                     <br/>
-                    <span>Tel: +99890000000</span>
+                    <span>Tel: +998 70 762-58-51</span>
                     <p>Наше рабочее время: ( 9:00 / 18:00 )</p>
                     <p>Адрес: Ташкентская область, г. Нурафшан, ул. Ташкентская дорога, 26/1</p>
-                    
                 </div>
                 <div></div>
 
@@ -64,5 +63,7 @@
             </div>
         </div>
     </div>
-    <div class="footer__foot"><p>Toshkent viloyati Turizm qo'mitasi 2022 &copy;</p></div>
+    <div class="footer__foot">
+        <p>Официальный сайт Главного управления туризма и культурного наследия Ташкентской области &copy;</p>
+    </div> 
 </footer>
