--- a/templates/widgets/navbar.htm
+++ b/templates/widgets/navbar.htm
@@ -6,7 +6,7 @@
         <div class="nav-in">
             <div class="brand">
                 <a href="/"><img src="{{ web_name.logo.url }}" width="70" alt=""></a>
-                <span><a href="/">{{ web_name.ru_name | title }}</a></span>
+                <span><a href="/">Официальный сайт Главного управления туризма<br> и культурного наследия Ташкентской области</a></span>
             </div>
             <div class="lang">
                 <a id="lang_uz" href="" >Uz</a> |
@@ -47,7 +47,7 @@
                         <path fill-rule="evenodd" d="M1.885.511a1.745 1.745 0 0 1 2.61.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.678.678 0 0 0 .178.643l2.457 2.457a.678.678 0 0 0 .644.178l2.189-.547a1.745 1.745 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.634 18.634 0 0 1-7.01-4.42 18.634 18.634 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877L1.885.511z"/>
                     </svg>
                 </span>
-                <span id="phone-number">(0367) <b>1695125</b> </span>
+                <span id="phone-number">(+998 70) <b>7625855</b> </span>
             </div>
         </div>
     </nav>  
@@ -57,7 +57,7 @@
         <div class="nav-in">
             <div class="brand">
                 <a href="/"><img src="{{ web_name.logo.url }}" width="70" alt=""></a>
-                <span><a href="/">{{ web_name.en_name | title }}</a></span>
+                <span><a href="/">The official website of the General Directorate of Tourism <br> and Cultural Heritage of the Tashkent region</a></span>
             </div>
             <div class="lang">
                 <a id="lang_uz" href="" >Uz</a> |
@@ -98,7 +98,7 @@
                         <path fill-rule="evenodd" d="M1.885.511a1.745 1.745 0 0 1 2.61.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.678.678 0 0 0 .178.643l2.457 2.457a.678.678 0 0 0 .644.178l2.189-.547a1.745 1.745 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.634 18.634 0 0 1-7.01-4.42 18.634 18.634 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877L1.885.511z"/>
                     </svg>
                 </span>
-                <span id="phone-number">(0367) <b>1695125</b> </span>
+                <span id="phone-number">(+998 70) <b>7625855</b> </span>
             </div>
         </div>
     </nav>  
@@ -108,7 +108,7 @@
         <div class="nav-in">
             <div class="brand">
                 <a href="/"><img src="{{ web_name.logo.url }}" width="70" alt=""></a>
-                <span><a href="/">{{ web_name.uz_name | title }}</a></span>
+                <span><a href="/">Toshkent viloyati Turizm va madaniy <br> meros bosh boshqarmasi rasmiy sayti</a></span>
             </div>
             <div class="lang">
                 <a id="lang_uz" href="" class="a-hover">Uz</a> |
@@ -149,7 +149,7 @@
                         <path fill-rule="evenodd" d="M1.885.511a1.745 1.745 0 0 1 2.61.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.678.678 0 0 0 .178.643l2.457 2.457a.678.678 0 0 0 .644.178l2.189-.547a1.745 1.745 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.634 18.634 0 0 1-7.01-4.42 18.634 18.634 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877L1.885.511z"/>
                     </svg>
                 </span>
-                <span id="phone-number">(0367) <b>1695125</b> </span>
+                <span id="phone-number">(+998 70) <b>7625855</b> </span>
             </div>
         </div>
     </nav>
