--- a/templates/base.htm
+++ b/templates/base.htm
@@ -170,12 +170,12 @@
 
             $(window).scroll(function(){
                 if (document.documentElement.scrollTop > 10) {
-                    $('.nav-head').addClass('scrol-fixed');
+                    // $('.nav-head').addClass('scrol-fixed');
                     $(".to-top").show(500);
                     $("#slideshow-btn").show(500);
                     
                 } else {
-                    $('.nav-head').removeClass('scrol-fixed');
+                    // $('.nav-head').removeClass('scrol-fixed');
                     $(".to-top").hide(200);
                     $("#slideshow-btn").hide(200);
                 }
