--- a/templates/widgets/navbar.htm
+++ b/templates/widgets/navbar.htm
@@ -32,12 +32,12 @@
             </ul>
             <ul>
                 <li>
-                    <a href="/ru">о нас</a>
+                    <a href="/">{{ nav3.ru_name | title }}</a>
                 </li>
             </ul>
             <ul>
                 <li>
-                    <a href="/ru">документы</a>
+                    <a href="/">{{ nav4.ru_name | title }}</a>
                 </li>
             </ul>
             <ul>
@@ -101,12 +101,12 @@
             </ul>
             <ul>
                 <li>
-                    <a href="/en">About Us</a>
+                    <a href="/">{{ nav3.en_name | title }}</a>
                 </li>
             </ul>
             <ul>
                 <li>
-                    <a href="/en">Documents</a>
+                    <a href="/">{{ nav4.en_name | title }}</a>
                 </li>
             </ul>
             <ul>
@@ -169,12 +169,12 @@
             </ul>
             <ul>
                 <li>
-                    <a href="/">Biz haqimizda</a>
+                    <a href="/">{{ nav3.uz_name | title }}</a>
                 </li>
             </ul>
             <ul>
                 <li>
-                    <a href="/">Me'yoriy huquqiy hujjatlard</a>
+                    <a href="/">{{ nav4.uz_name | title }}</a>
                 </li>
             </ul>
             <ul>
